client_data_manager/client_data_manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-data-manager-service
  labels:
    app: client-data-manager
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: client-data-manager
